--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,76 +1,117 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
+
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 222.2 84% 4.9%;
+    --background: 0 0% 98%;
+    --foreground: 0 0% 0%;
 
-    --card: 0 0% 100%;
-    --card-foreground: 222.2 84% 4.9%;
- 
+    --card: 0 0% 95%;
+    --card-foreground: 0 0% 0%;
+
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
- 
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
- 
+
+    --primary: 22 65% 57%;
+    --primary-foreground: 0 0% 100%;
+    --primary-hover: 21, 94%, 75%;
+
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
- 
-    --muted: 210 40% 96.1%;
+
+    --muted: 0, 0%, 87%;
     --muted-foreground: 215.4 16.3% 46.9%;
- 
+
     --accent: 210 40% 96.1%;
     --accent-foreground: 222.2 47.4% 11.2%;
- 
-    --destructive: 0 84.2% 60.2%;
+
+    --destructive: 0, 65%, 49%;
     --destructive-foreground: 210 40% 98%;
 
-    --border: 214.3 31.8% 91.4%;
+    --border: 0, 0%, 81%;
+    --border-active: 22, 65%, 57%;
+    --border-destructive: 0, 65%, 49%;
     --input: 214.3 31.8% 91.4%;
     --ring: 222.2 84% 4.9%;
- 
+
     --radius: 0.5rem;
   }
- 
+
   .dark {
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
- 
+
     --card: 222.2 84% 4.9%;
     --card-foreground: 210 40% 98%;
- 
+
     --popover: 222.2 84% 4.9%;
     --popover-foreground: 210 40% 98%;
- 
+
     --primary: 210 40% 98%;
     --primary-foreground: 222.2 47.4% 11.2%;
- 
+
     --secondary: 217.2 32.6% 17.5%;
     --secondary-foreground: 210 40% 98%;
- 
+
     --muted: 217.2 32.6% 17.5%;
     --muted-foreground: 215 20.2% 65.1%;
- 
+
     --accent: 217.2 32.6% 17.5%;
     --accent-foreground: 210 40% 98%;
- 
+
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
- 
+
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
   }
 }
- 
+
 @layer base {
   * {
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground text-[0.9375rem] font-medium leading-[1.5625rem];
+  }
+
+  h1 {
+    @apply text-[3.5rem] font-bold uppercase leading-[3.625rem] tracking-[0.125rem];
+  }
+
+  h2 {
+    @apply text-[2.5rem] font-bold uppercase leading-[2.75rem] tracking-[0.09375rem];
+  }
+
+  h3 {
+    @apply text-[2rem] font-bold uppercase leading-[2.25rem] tracking-[0.071875rem];
+  }
+
+  h4 {
+    @apply text-[1.75rem] font-bold uppercase leading-[2.375rem] tracking-[0.125rem];
+  }
+
+  h5 {
+    @apply text-[1.5rem] font-bold uppercase leading-[2.0625rem] tracking-[0.10625rem];
+  }
+
+  h6 {
+    @apply text-[1.125rem] font-bold uppercase leading-[1.5rem] tracking-[0.08125rem];
+  }
+}
+
+@layer utilities {
+  .overline {
+    @apply text-primary text-[0.875rem] font-normal uppercase leading-[1.1875rem] tracking-[0.625rem];
+  }
+
+  .sub-title {
+    @apply text-primary text-[0.8125rem] font-bold leading-[1.5625rem] tracking-[0.0625rem];
+  }
+
+  .nav-link {
+    @apply text-[0.8125rem] font-bold leading-[1.5625rem] tracking-[0.125rem];
   }
 }
